force-app/main/default/objects/AAO_Setting__mdt/AAO_Setting__mdt.object-meta.xml
<CustomObject>
    <label>AAO Setting</label>
    <pluralLabel>AAO Settings</pluralLabel>
</CustomObject>