force-app/main/default/objects/AAO_Setting__mdt/fields/AAO_Note__c.field-meta.xml
<CustomField>
    <fullName>AAO_Note__c</fullName>
    <description>What this setting governs and what turning it off costs, in the admin&apos;s own reading. Ours, upgradeable.</description>
    <label>Note</label>
    <type>LongTextArea</type>
    <length>1024</length>
</CustomField>