force-app/main/default/objects/AAO_Setting__mdt/fields/AAO_Org_Override__c.field-meta.xml
<CustomField>
    <fullName>AAO_Org_Override__c</fullName>
    <description>THE ORG&apos;S answer, and null until somebody sets it. SubscriberControlled, so an upgrade never touches it and we cannot overwrite what a customer chose. A Checkbox cannot express null, so the override is a picklist and blank means untouched: without that, a shipped default of ON could never be turned off by a customer who had simply never opened the record.</description>
    <label>Org Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>