force-app/main/default/objects/AAO_Setting__mdt/fields/AAO_Shipped_Default__c.field-meta.xml
<CustomField>
    <fullName>AAO_Shipped_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OUR value, what an unconfigured org gets. Upgradeable, because it is ours to move.</description>
    <label>Shipped Default</label>
    <type>Checkbox</type>
</CustomField>